# forkcast

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  REFACTOR_PLAN.md  SPEC_DRIVEN_DEVELOPMENT.md  main.py  manage_prompts.py  pyproject.toml
.claude/: settings.local.json
.claude/agents/: architect.md  code-reviewer.md  debugger.md  implementer.md  test-writer.md
.github/workflows/: claude-issue.yml  deploy.yml  test.yml
.specs/001-database-connection/: tasks.md
.specs/002-storage-layer/: design.md  tasks.md  tests.md
agent/: __init__.py  classifier.py  graph.py  prompts.py  router.py  state.py  tools.py  workflows.py
agent/workflows/: __init__.py  add_recipe.py  chat.py  meal_plan.py  parse_recipe.py
api/: auth.py  chat.py  deps.py  main.py  users.py
backend/: .env.example  .gitignore  logging_config.py  main.py  manage_prompts.py  pyproject.toml
backend/agent/: __init__.py  graph.py  state.py  tools.py
backend/agent/workflows/: meal_plan.py  parse_recipe.py
backend/api/: auth.py  chat.py  deps.py  main.py  meal_plans.py  middleware.py  recipes.py
backend/migrations/: 001_initial_schema.sql  002_prompt.sql  003_create_users.sql  005_recipe_source_url.sql
backend/models/: __init__.py  domain.py  prompt.py
backend/prompts/: agent_v1.txt  chat_v1.txt  chat_v2.txt
backend/scraper/: __init__.py  __main__.py  client.py  discover.py  extract.py  fetch.py  ingredients.py  llm_fallback.py
backend/scripts/: dev.py
backend/storage/: __init__.py  db.py  ingredient_store.py  prompt_store.py  recipe_store.py  shopping_item_store.py  user_store.py  vector_store.py  weekly_plan_store.py
backend/tests/: factories.py
backend/tests/api/: test_parse.py  test_recipes.py
backend/tests/storage/: conftest.py  test_db.py  test_ingredient_store.py  test_recipe_store.py  test_shopping_item_store.py  test_vector_store.py  test_waitlist_store.py  test_weekly_plan_store.py
backend/utils/: __init__.py  date.py  url.py
bot/: client.py  handlers.py  main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  LoginPage.tsx
frontend/src/hooks/: useAuth.ts  useChatStream.ts  useTheme.test.ts  useTheme.ts
landing/: astro.config.mjs  package-lock.json  package.json
landing/public/: robots.txt
migrations/: 001_initial_schema.sql  002_prompt.sql  003_create_users.sql
models/: __init__.py  domain.py  prompt.py
prompts/: meal_plan_v1.txt  parse_recipe_v1.txt
scraper/: .dockerignore  .env.example  Dockerfile  api.py  app.py  auth.py  cli.py  client.py  discover.py  extract.py  fetch.py  ingredients.py  main.py  models.py  pyproject.toml  store.py  worker.py
scraper/static/: dashboard.html
scraper/tests/: test_discover.py  test_extract.py  test_ingredients.py
scraper/tests/fixtures/: non_recipe.html  recipe_graph.html  recipe_jsonld.html  sitemap_index.xml  sitemap_recipes.xml
scripts/: dev.py
storage/: __init__.py  db.py  ingredient_store.py  prompt_store.py  recipe_store.py  shopping_item_store.py  user_store.py  vector_store.py  weekly_plan_store.py
tests/: conftest.py  factories.py  test_db.py  test_workflows.py
tests/agent/: test_classifier.py
tests/bot/: test_handlers.py
tests/storage/: conftest.py  test_db.py  test_ingredient_store.py  test_recipe_store.py  test_shopping_item_store.py  test_storage_layer.py  test_weekly_plan_store.py
utils/: __init__.py  date.py  url.py
(+17 files in other folders)
