[project]
name = "meal-prep-agent"
version = "0.1.0"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "yoyo-migrations>=9.0.0",
    "chromadb>=1.5.9",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-chroma>=1.1.0",
    "langchain-voyageai>=0.3.3",
    "httpx>=0.28.1",
    "bs4>=0.0.2",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langfuse>=4.6.1",
    "langchain>=1.3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning:yoyo"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
