[project]
name = "meal-prep-agent"
version = "0.1.0"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "yoyo-migrations>=9.0.0",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-voyageai>=0.3.3",
    "httpx>=0.28.1",
    "bs4>=0.0.2",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langfuse>=4.6.1",
    "langchain>=1.3.1",
    "cachetools>=7.1.4",
    "fastapi>=0.138.2",
    "langchain-postgres>=0.0.17",
    "uvicorn>=0.49.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning:yoyo"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
