[project]
name = "forkcast-scraper"
version = "0.1.0"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# D213: multi-line docstring summaries start on the second line, not on the
# opening-quotes line. (Deliberately not enabling the full D family — we don't
# require docstrings, only that multi-line ones use this format.)
extend-select = ["D213"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
